changed to right html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-github_test
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GitHub Test</title>
+</head>
+<body>
+    <h1>GitHub Hoe het werkt</h1>
+    <h2>Algemeen</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ad rem accusamus dignissimos eius corporis nam voluptatem, non aliquam. Assumenda.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+</body>
+</html>
