--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 <body>
     <h1>GitHub Hoe het werkt</h1>
     <h2>Algemeen</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ad rem accusamus dignissimos eius corporis nam voluptatem, non aliquam. Assumenda.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <p>/localWorkingDirectory = your code, your playground</p>
+    <p>Staging Area = temporary place holding changes before committing
+    <p>Local Repo = local area with committed changes</p>
+    <p>Remote Repo = remote area on GitHub servers where you push your code to or pull new code from</p>
+    <p>git clone url = zo kopieer een lokale versie van een gedeelde remote repo</p>
+    <p>git checkout = als je met de code aan de slag gaat, zodat je in je local environment aan de slag gaat</p>
+    <p>git add = stage snapshot, je voegt de wijzigingen toe aan de staging area , als je -A toevoegt, dan zeg je: voeg alle untracked changes toe. Dit is de voorbereiding op de commit</p>
+    <p>git commit = committen, zo sla je op in je local repo. Als je er -m achter zet, dan moet er een message volgen: git commit -m</p>
+    <p>git pull = to integrate gegevens op de remote repo met de gegevens op jouw local repo - dat heb je nodig als je gaat samenwerken. Iemand heeft code aangepast en jij moet daar op verder werken, dan moet je die binnenhalen. 
+    <p>Je kan dan conflicten krijgen: als jij iets zus hebt gezet en de ander zo, dan moet je kiezen om die conflicten op te lossen.</p>
+    </p>
 </body>
 </html>
